--- a/Ruby_Lab.ipynb
+++ b/Ruby_Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "(0.8536276945594825+/-2.6026704457596055e-07, 43122.77+/-0.01, 50517.07+/-0.01)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "0.07727195714788411"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "0.8514270410656961"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "4      0.248031                         0.01  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "4      0.248031                         0.01  0.24803+/-0.00020  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,15 +345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "0.484428+/-0.000008 1.08565+/-0.00007\n"
      ]
     }
@@ -378,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +508,7 @@
        "117                   87.9+/-2.2         87.867886  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +528,7 @@
        "281.9729374708541+/-7.049328239062466"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +550,7 @@
        " 3.546439629878893+/-0.08866105114651159)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +579,7 @@
        "(128.65459984347157+/-3.2163650035742855, 128.65459984347157)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +599,7 @@
        "3.2163650035742855"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +619,7 @@
        "0.007772749681835366+/-0.00019431874249824596"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +640,7 @@
        "Name: Wavelength, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +672,7 @@
        "0.0089599999487+/-1.414213562373095e-07"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +694,7 @@
        " 1.7863017528487575+/-2.574296479529092e-06)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +722,7 @@
        "2.0+/-0.022360679774997897"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +742,7 @@
        "0.022360679774997897"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +762,7 @@
        "'0.258466+/-0.000031%'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +782,7 @@
        "'8455.367437593979'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +802,7 @@
        "('0.05776+/-0.00014%', '400.9999999999536')"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,20 +823,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.36787944117144233+/-0.01175949956047502"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "vt_v0 = ufloat(1,OSCILLOSCOPE_VOLTAGE_PCT_ERROR)/ufloat(math.e,OSCILLOSCOPE_VOLTAGE_PCT_ERROR)\n",
@@ -849,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +845,7 @@
        "282.1+/-9.017508853619649"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +867,7 @@
        " ('1.3+/-3.2%', '0.3957373436420337'))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -903,13 +890,56 @@
        "3.5448422545196734+/-0.11331317410427573"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ed*1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.427999999999997+/-0.001414213562373095"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufloat(547.91,0.001) - ufloat(539.482 ,0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('1.14390+/-0.00024%', '4689.999999999997')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abs_wavelength = ufloat(414.690, 0.001)\n",
+    "accepted_abs_wavelength = 410\n",
+    "\n",
+    "formulas.get_deviations(measured =abs_wavelength, accepted = accepted_abs_wavelength)"
    ]
   },
   {
