Ceo Lab curve fitting

--- a/Calculator.ipynb
+++ b/Calculator.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "from uncertainties import ufloat # do MATH with this for error propagation\n",
     "from uncertainties.umath import log \n",
+    "from util import *\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "x = ufloat(1, 0.1)\n",
