--- a/FUEL_Lab.ipynb
+++ b/FUEL_Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,11 @@
     "import numpy as np\n",
     "d_diam = get_apl_ufloat(9.5E-3)\n",
     "PM_area =  math.pi * (d_diam/2)**2\n",
+    "\n",
+    "HHV = 141.88e6 # J/kg\n",
+    "LHV = 119.96e6 #J/kg\n",
+    "\n",
+    "density_H = 0.08375 #kg/m^3\n",
     "\n",
     "def avg(arr):\n",
     "    return (sum(arr))/len(arr)"
@@ -27,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +41,7 @@
        "7.08821842466197e-05+/-1.4922565104551518e-06"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +173,7 @@
        "7       8  0.001560+/-0.000010      22.0+/-0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +202,7 @@
        "23.472047562915538+/-0.49665936816583584"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +241,7 @@
        "0.01216+/-0.00015940200751558934"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +270,7 @@
        "0.28542009836505294+/-0.007104424275257045"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +290,7 @@
        "0.13350115222532444+/-0.0033234552739163726"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,19 +313,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "i =get_apl_ufloat(421.9e-3)\n",
-    "t = get_apl_ufloat(99.33)\n",
+    "t = get_apl_ufloat(96.33)\n",
     "v = get_apl_ufloat(1.970)\n",
     "\n",
     "P_E = i*v\n",
     "\n",
     "volume_H = get_apl_ufloat(5e-6) # m^#\n",
-    "density_H = 0.08375 #kg/m^3\n",
-    "HHV = 141.88e6 #J/kg\n",
+    "\n",
     "m_H = volume_H*density_H\n",
     "\n",
     "n_E = (m_H * HHV)/(P_E*t)\n"
@@ -328,16 +332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.71964748641857+/-0.14397596737676605, 5e-06+/-1e-06)"
+       "(0.7420594293154423+/-0.14845980436073367, 5e-06+/-1e-06)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +361,7 @@
        "0.831143+/-0.004223596808408681"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,28 +379,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.43683387937672774+/-0.10921212665247536,\n",
+       "(0.5166554752081538+/-0.12916819381004668,\n",
        " 0.04843159999999999+/-9.843942299708993e-05)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def conv_efficiency_hydrogen(P, t, vol , HHV = 141.88e6):\n",
+    "def conv_efficiency_hydrogen(P, t, vol , HHV = LHV):\n",
     "    # vol in cm^3\n",
     "\n",
     "    vol = vol * 1e-6 #cm^3 to m^3\n",
     "    density_H = 0.08375 #kg/m^3\n",
-    "    HHV = 141.88e6 #J/kg\n",
     "    m_H = vol*density_H\n",
     "\n",
     "    return P*t/(m_H*HHV)\n",
@@ -408,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.15317964477022833+/-0.07658982344992624"
+       "0.18116978992997662+/-0.09058489622437088"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.08662007582611331+/-0.04331003793462125"
+       "0.10244795230250879+/-0.05122397617675944"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +452,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1777593259807531+/-0.17775932974216727"
+       "0.21024085670347822+/-0.2102408611522064"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,16 +472,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.34163865659018133+/-0.3416386578664595"
+       "0.40406546012850053+/-0.4040654616379899"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -498,18 +501,18 @@
        "('19.1+/-2.0%', '9.477740838545182')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_deviations(measured = n_peak, accepted = 0.165)"
+    "get_deviations(measured = n_peak, accepted = 0.165), n_peak"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -518,34 +521,41 @@
        "('10+/-18%', '0.5580967090928317')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_deviations(measured = n_E, accepted = 0.8)"
+    "get_deviations(measured = n_E, accepted = 0.8), n_E"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('13+/-22%', '0.5783800989818063')"
+       "('3+/-26%', '0.12894409000289314')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_deviations(measured = n_FC, accepted = 0.5)"
+    "get_deviations(measured = n_FC, accepted = 0.5),n_FC"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
